--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
                <div class="carousel-inner">
                   <div class="carousel-item active">
                      <div class="container">
-                        <h1 class="banner_taital">Adventure</h1>
-                        <p class="banner_text">There are many variations of passages of Lorem Ipsum available, but the majority have sufferedThere are ma available, but the majority have suffered</p>
+                        <h1 class="banner_taital">Badminton</h1>
+                        <p class="banner_text">\Nation Sport for Malaysian</p>
                         <div class="read_bt"><a href="#">Get A Quote</a></div>
                      </div>
                   </div>
